# receiver-logger

./: .gitignore  CMakeLists.txt  Config.cpp  Config.hpp  Dockerfile  README.md  build.sh  docker-build.sh  install-dependencies.sh  main.cpp  receiver-logger-sequence.puml
client/: ClientFactory.hpp  ClientFactoryImpl.cpp  ClientFactoryImpl.hpp  README.md  ZmqClient.cpp  ZmqClient.hpp  receiver-logger-client-class.puml  receiver-logger-client-sequence.puml
writer/: FileWriter.cpp  FileWriter.hpp  README.md  WriterFactory.hpp  WriterFactoryImpl.cpp  WriterFactoryImpl.hpp  receiver-logger-writer-class.puml  receiver-logger-writer-sequence.puml
